@@ -1,0 +1,13 @@
+.. |bottom| image:: images/biohazard.png
+   :align: bottom
+   :width: 6pt
+
+.. |middle| image:: images/biohazard.png
+   :align: middle
+   :width: 6pt
+
+.. |top| image:: images/biohazard.png
+   :align: top
+   :width: 6pt
+
+Docutils supports aligning bottom |bottom| middle |middle| and top |top|
